...
            } else {
              context.go('/'); // Navigate to landing page if no route to pop
            }
          },
        ),
        title: const Text(
          'Login',
          style: TextStyle(
            color: Color(0xFFFFA500),
            fontSize: 24,
            fontWeight: FontWeight.bold,
          ),
        ),
...
